-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.13.3
-
None
-
Windows 10
-
-
2c2c7255b9623704372bcf8a85997609d7507335 (qt-creator/qt-creator/4.14)
Hi, I don't have password field. I can't add my BeagleBone device.
- is duplicated by
-
QTCREATORBUG-24223 Device test failed in Windows
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-24979 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
324244,2 | SSH: Do not use sftp -b | 4.14 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |