SSH: Do not use sftp -b

The -b option turns on "pure batch mode", i.e. users won't get asked for
a password. This does not seem to be overridable. Therefore, we use
input file redirection instead.

Fixes: QTCREATORBUG-24979
Change-Id: Id1f703ffd61a7b8d194437ee89676770990d0efa
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>